--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "easysax",
 	"description": "pure javascript xml parser",
 	"scripts": {
+		"all": "run-s lint test",
+		"lint": "eslint easysax.js test/*.js",
 		"test": "mocha test/test.js"
 	},
 	"keywords": [
@@ -30,6 +32,9 @@
 		"url": "https://github.com/vflash/easysax"
 	},
 	"devDependencies": {
-		"mocha": "^4.0.1"
+		"eslint": "^4.9.0",
+		"eslint-plugin-mocha": "^4.11.0",
+		"mocha": "^4.0.1",
+		"npm-run-all": "^4.1.1"
 	}
 }
