--- a/package.json
+++ b/package.json
@@ -1,40 +1,46 @@
 {
-	"name": "easysax",
-	"description": "pure javascript xml parser",
-	"scripts": {
-		"all": "run-s lint test",
-		"lint": "eslint easysax.js test/*.js",
-		"test": "mocha test/test.js"
-	},
-	"keywords": [
-		"xml",
-		"sax",
-		"parser",
-		"pure"
-	],
-	"version": "0.2.0",
-	"main": "./easysax.js",
-	"bugs": {
-		"url": "https://github.com/vflash/easysax/issues"
-	},
-	"author": {
-		"name": "Vopilovskiy Konstantin",
-		"email": "flash.vkv@gmail.com",
-		"url": "http://vflash.ru"
-	},
-	"files": [
-		"easysax.js",
-		"LICENSE",
-		"README.md"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/vflash/easysax"
-	},
-	"devDependencies": {
-		"eslint": "^4.9.0",
-		"eslint-plugin-mocha": "^4.11.0",
-		"mocha": "^4.0.1",
-		"npm-run-all": "^4.1.1"
-	}
+  "name": "saxen",
+  "description": "A tiny, super fast, namespace aware sax-style XML parser written in plain JavaScript",
+  "scripts": {
+    "all": "run-s lint test",
+    "lint": "eslint parser.js test/*.js",
+    "test": "mocha test/index.js"
+  },
+  "keywords": [
+    "xml",
+    "sax",
+    "parser",
+    "pure"
+  ],
+  "version": "0.2.0",
+  "main": "./parser.js",
+  "bugs": {
+    "url": "https://github.com/nikku/saxen/issues"
+  },
+  "author": {
+    "name": "Vopilovskiy Konstantin",
+    "email": "flash.vkv@gmail.com",
+    "url": "http://vflash.ru"
+  },
+  "contributors": [
+    {
+      "name": "Nico Rehwaldt",
+      "url": "https://github.com/nikku"
+    }
+  ],
+  "files": [
+    "parser.js",
+    "LICENSE",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nikku/saxen"
+  },
+  "devDependencies": {
+    "eslint": "^4.9.0",
+    "eslint-plugin-mocha": "^4.11.0",
+    "mocha": "^4.0.1",
+    "npm-run-all": "^4.1.1"
+  }
 }
