--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "all": "run-s lint test",
     "lint": "eslint parser.js test/*.js",
-    "test": "mocha test/index.js"
+    "test": "mocha test/index.js",
+    "test-coverage": "NO_PERF=1 nyc --check-coverage --statements 90 npm test"
   },
   "keywords": [
     "xml",
@@ -41,6 +42,7 @@
     "eslint": "^4.9.0",
     "eslint-plugin-mocha": "^4.11.0",
     "mocha": "^4.0.1",
-    "npm-run-all": "^4.1.1"
+    "npm-run-all": "^4.1.1",
+    "nyc": "^11.3.0"
   }
 }
