--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "saxen",
   "description": "A tiny, super fast, namespace aware sax-style XML parser written in plain JavaScript",
   "scripts": {
-    "all": "run-s lint test-coverage",
+    "all": "run-s lint test-coverage test-perf",
     "lint": "eslint parser.js test/*.js",
     "test": "mocha test/index.js",
-    "test-coverage": "NO_PERF=1 nyc --check-coverage --statements 95 npm test"
+    "test-coverage": "NO_PERF=1 nyc --check-coverage --statements 95 npm test",
+    "test-perf": "node test/perf"
   },
   "keywords": [
     "xml",
@@ -44,6 +45,7 @@
     "eslint-plugin-mocha": "^4.11.0",
     "mocha": "^4.0.1",
     "npm-run-all": "^4.1.1",
-    "nyc": "^11.3.0"
+    "nyc": "^11.3.0",
+    "table": "^4.0.2"
   }
 }
