--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "eslint": "^4.9.0",
-    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-bpmn-io": "^0.5.2",
     "mocha": "^4.0.1",
     "npm-run-all": "^4.1.1",
     "nyc": "^11.3.0",
