--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "all": "run-s lint test-coverage test-perf",
     "lint": "eslint parser.js test/*.js",
+    "pretest": "rollup -c",
     "test": "mocha test/index.js",
     "test-coverage": "NO_PERF=1 nyc --check-coverage --statements 95 npm test",
     "test-perf": "node test/perf"
@@ -15,7 +16,9 @@
     "pure"
   ],
   "version": "6.0.1",
-  "main": "./parser.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "browser": "./dist/saxen.umd.js",
   "bugs": {
     "url": "https://github.com/nikku/saxen/issues"
   },
@@ -41,6 +44,8 @@
     "mocha": "^4.0.1",
     "npm-run-all": "^4.1.1",
     "nyc": "^11.3.0",
+    "rollup": "^0.57.1",
+    "rollup-plugin-uglify": "^3.0.0",
     "table": "^4.0.2"
   }
 }
