--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "saxen",
   "description": "A tiny, super fast, namespace aware sax-style XML parser written in plain JavaScript",
   "scripts": {
-    "all": "run-s lint test-coverage test-perf",
+    "all": "run-s lint bundle test-coverage test-perf",
     "lint": "eslint .",
-    "pretest": "rollup -c",
-    "test": "mocha test/index.js",
+    "bundle": "rollup -c",
+    "test": "mocha -r esm test/index.js",
     "test-coverage": "NO_PERF=1 nyc --reporter=lcov --reporter=html npm test",
-    "test-perf": "node test/perf"
+    "test-perf": "node test/perf",
+    "prepublishOnly": "run-s bundle test-perf"
   },
   "keywords": [
     "xml",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "eslint": "^4.9.0",
     "eslint-plugin-bpmn-io": "^0.5.2",
+    "esm": "^3.0.84",
     "mocha": "^4.0.1",
     "npm-run-all": "^4.1.1",
     "nyc": "^11.3.0",
