--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "npm-run-all": "^4.1.1",
     "nyc": "^15.0.0",
     "rollup": "^0.57.1",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "table": "^5.4.6"
   }
 }
