--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "rollup": "^0.57.1",
     "rollup-plugin-terser": "^7.0.2",
     "table": "^5.4.6"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
