--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "url": "https://github.com/nikku/saxen"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.2.0",
     "eslint": "^8.30.0",
     "eslint-plugin-bpmn-io": "^0.16.0",
     "esm": "^3.0.84",
     "mocha": "^8.4.0",
     "npm-run-all": "^4.1.1",
     "nyc": "^15.1.0",
-    "rollup": "^2.52.7",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup": "^2.79.1",
     "table": "^6.7.1"
   },
   "files": [
