--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "saxen",
   "description": "A tiny, super fast, namespace aware sax-style XML parser written in plain JavaScript",
   "scripts": {
-    "all": "run-s lint bundle test-coverage test-perf",
+    "all": "run-s lint test-coverage test-perf",
     "lint": "eslint .",
+    "pretest": "run-s bundle",
     "bundle": "rollup -c --bundleConfigAsCjs",
     "test": "mocha test/*.js",
     "test-coverage": "NO_PERF=1 nyc --reporter=lcov --reporter=html npm test",
     "test-perf": "node test/perf/index.cjs",
-    "prepublishOnly": "run-s bundle test-perf"
+    "prepare": "run-s bundle"
   },
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./package.json": "./package.json"
+  },
   "keywords": [
     "xml",
     "sax",
@@ -18,8 +26,6 @@
     "pure"
   ],
   "version": "9.0.0",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
   "bugs": {
     "url": "https://github.com/nikku/saxen/issues"
   },
@@ -49,7 +55,6 @@
     "npm-run-all": "^4.1.1",
     "nyc": "^15.1.0",
     "rollup": "^4.3.1",
-    "saxen": "file:",
     "table": "^6.8.1"
   },
   "files": [
