--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pretest": "run-s bundle",
     "bundle": "rollup -c --bundleConfigAsCjs",
     "test": "mocha test/*.js",
-    "test-coverage": "NO_PERF=1 nyc --reporter=lcov --reporter=html npm test",
+    "test-coverage": "c8 --reporter=lcov --reporter=html npm test",
     "test-perf": "node test/perf/index.cjs",
     "prepare": "run-s bundle"
   },
@@ -49,11 +49,11 @@
     "url": "https://github.com/nikku/saxen"
   },
   "devDependencies": {
+    "c8": "^10.1.2",
     "eslint": "^8.57.1",
     "eslint-plugin-bpmn-io": "^1.0.1",
     "mocha": "^10.7.3",
     "npm-run-all": "^4.1.1",
-    "nyc": "^15.1.0",
     "rollup": "^4.24.0",
     "table": "^6.8.2"
   },
