--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-bpmn-io": "^1.0.1",
     "mocha": "^10.7.3",
-    "npm-run-all": "^4.1.1",
+    "npm-run-all2": "^7.0.2",
     "rollup": "^4.24.0",
     "table": "^6.8.2"
   },
