--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        node-version: [ 18, 20, 22 ]
+        node-version: [ 20, 24 ]
 
     runs-on: ${{ matrix.os }}
 
@@ -23,7 +23,7 @@ jobs:
     - name: Build
       run: npm run all
     - name: Upload Coverage
-      if: matrix.node-version == 20
       uses: codecov/codecov-action@v4
+      if: matrix.node-version == 24
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
