chore!: drop CJS distribution

--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
   },
   "type": "module",
   "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    },
+    ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
   "keywords": [
